# toshiba-pkvpg

./: LICENSE  README.md  pyproject.toml
captures/: AIR FLOW&MO-17-53&cool-22-auto-_-_-100-_&cool-22-auto-wide center-_-100-_.txt  AIR FLOW&MO-17-53&cool-22-auto-spot center-_-100-_&cool-22-auto-spot right-_-100-_.txt  AIR FLOW&MO-17-53&cool-22-auto-spot left-_-100-_&cool-22-auto-_-_-100-_.txt  AIR FLOW&MO-17-53&cool-22-auto-spot right-_-100-_&cool-22-auto-spot left-_-100-_.txt  AIR FLOW&MO-17-53&cool-22-auto-wide center-_-100-_&cool-22-auto-wide right-_-100-_.txt  AIR FLOW&MO-17-53&cool-22-auto-wide left-_-100-_&cool-22-auto-spot center-_-100-_.txt  AIR FLOW&MO-17-53&cool-22-auto-wide right-_-100-_&cool-22-auto-wide left-_-100-_.txt  COMFORT SLEEP B after 3s&DI-12-29&cool-22-auto-_-_-100-_&cool-22-auto-_-_-100-_.txt  COMFORT SLEEP B&DI-12-29&cool-22-auto-_-_-100-_&cool-22-auto-_-1h-100-_.txt  COMFORT SLEEP again within 3s&DI-12-27&cool-22-auto-_-1h-100-_&cool-22-auto-_-3h-100-_.txt  COMFORT SLEEP again within 3s&DI-12-27&cool-22-auto-_-3h-100-_&cool-22-auto-_-5h-100-_.txt  COMFORT SLEEP again within 3s&DI-12-27&cool-22-auto-_-5h-100-_&cool-22-auto-_-9h-100-_.txt  COMFORT SLEEP again within 3s&DI-12-27&cool-22-auto-_-9h-100-_&cool-22-auto-_-_-100-_.txt  COMFORT SLEEP&DI-12-27&cool-22-auto-_-_-100-_&cool-22-auto-_-1h-100-_.txt  ECO&DI-12-47&cool-22-auto-_-_-100-ECO&cool-22-auto-_-_-100-_.txt  ECO&DI-12-47&cool-22-auto-_-_-100-_&cool-22-auto-_-_-100-ECO.txt  FAN&MO-16-58&cool-22-auto-_-_-100-_&cool-22-low-_-_-100-_.txt  OFF&MO-15-28&auto-22-auto-_-_-100-_&_-_-_-_-_-_-_.txt  (+61 more)
(+16 files in other folders)
